# DebugInDistributed

./: debug_py_example.py  madbg_example.py  main.py  plan-d_example.py  pyproject.toml
cudagraph_examples/: example.py  example_trace.py  example_trace_llm_decode.py
cudagraph_examples/cuda_graph_profiler_exp/: HOW_TO_READ.md  README.md  harness.py  parse_nsys_sqlite.py  parse_nsys_window.py  parse_torch_trace.py  report.md
cudagraph_examples/cuda_graph_profiler_exp/logs/: nsys_version.txt  nvidia_smi.txt  torch_env.txt
cudagraph_examples/cuda_graph_profiler_exp/metadata/: run_A.json  run_B.json  run_B_fallback_capture.json
cudagraph_examples/cuda_graph_profiler_exp/nsys/: run_C_eager_stats_cuda_api_trace.csv  run_C_eager_stats_cuda_gpu_trace.csv  run_D_graph_node_stats_cuda_api_trace.csv  run_D_graph_node_stats_cuda_gpu_trace.csv  run_E_graph_default_stats_cuda_api_trace.csv  run_E_graph_default_stats_cuda_gpu_trace.csv
cudagraph_examples/cuda_graph_profiler_exp/parsed/: latency_eager.json  run_A_torch_eager_summary.json  run_C_nsys_summary.json  run_C_nsys_window_summary.json  run_D_nsys_window_summary.json  run_E_nsys_summary.json  run_E_nsys_window_summary.json
cudagraph_examples/cuda_graph_profiler_exp/traces/: run_A_torch_eager.json  run_B_fallback_capture_torch_graph.json
distributed_examples/: boilerplate.py  collective_primitives.py  tensorparallellinear.py  utils.py
sglang_parallel_examples/: common.py  ep_deepep_vallina.py  expert_paralle.py  mega_moe_learn.py
