[project]
name = "debugindistributed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.20",
    "loguru>=0.7.3",
    "madbg>=1.3.2",
    "numpy>=2.4.6",
    "plan-d>=0.2.4",
    "torch>=2.12.0",
]

[tool.pyright]
reportPrivateImportUsage = "none"
reportIncompatibleMethodOverride = "none"